Added add book modal styling

--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
             </div>
         </div>
     </div>
+
+    <div class="modal-container">
+        <div class="modal">
+            <button id="close-modal">X</button>
+            <h3>Add a new book:</h3>
+            <form id="add-book-form">
+                <input type="text" name="title" id="title" placeholder="Book Title">
+                <input type="text" name="author" id="author" placeholder="Book Author">
+                <input type="text" name="pages" id="pages" placeholder="Amount of pages">
+                <input type="checkbox" name="has-read" id="has-read">Has this book been read?
+                
+                <button type="submit">Add Book</button>
+            </form>
+        </div>
+    </div>
 </body>
 
 </html>
