Completed delete book function Decrement bookDivs with indexes greater than deletedBook

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button id="add-book">Add Book</button>
         <div class="library-outter-padding">
             <div class="library-grid">
-                <div class="book">
+                <div class="book" id="book0">
                     <div class="book-info">
                         <h3>Lord of the rings</h3>
                         <h4>by JRR tolkien</h4>
@@ -29,20 +29,9 @@
                         <button class="delete">Delete</button>
                     </div>
                 </div>
-                <div class="book">
+                <div class="book" id="book1">
                     <div class="book-info">
-                        <h3>Lord of the rings</h3>
-                        <h4>by JRR tolkien</h4>
-                        <h4>234 pages</h4>
-                    </div>
-                    <div class="button-wrapper">
-                        <button class="not-read">Not read yet</button>
-                        <button class="delete">Delete</button>
-                    </div>
-                </div>
-                <div class="book">
-                    <div class="book-info">
-                        <h3>Lord of the rings</h3>
+                        <h3>ASDF</h3>
                         <h4>by JRR tolkien</h4>
                         <h4>234 pages</h4>
                     </div>
