Cleaned up js code, improve readability

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <div class="library-grid">
                 <div class="book" id="book0">
                     <div class="book-info">
-                        <h3>Lord of the rings</h3>
-                        <h4>by JRR tolkien</h4>
-                        <h4>234 pages</h4>
+                        <h3>The Lord of the rings</h3>
+                        <h4>by JRR Tolkien</h4>
+                        <h4>734 pages</h4>
                     </div>
                     <div class="button-wrapper">
                         <button class="not-read">Not read yet</button>
@@ -31,9 +31,9 @@
                 </div>
                 <div class="book" id="book1">
                     <div class="book-info">
-                        <h3>ASDF</h3>
-                        <h4>by JRR tolkien</h4>
-                        <h4>234 pages</h4>
+                        <h3>Aristotle and Dante</h3>
+                        <h4>by Benjamin Alire Sáenz</h4>
+                        <h4>368 pages</h4>
                     </div>
                     <div class="button-wrapper">
                         <button class="not-read">Not read yet</button>
